--- a/Timer/index.html
+++ b/Timer/index.html
@@ -6,10 +6,22 @@
     <title>Document</title>
 </head>
 <body>
+    <svg height = "200" width="200">
+        <circle 
+        r="90" 
+        cx="100" 
+        cy="100" 
+        fill="transparent"
+        stroke="blue"
+        stroke-width="10"
+        stroke-dasharray="565"
+        stroke-dashoffset="-70"
+        transform="rotate(-90 100 100)"
+        />
+    </svg>
     <input id="duration" value="30" />
     <button id="start">Start</button>
     <button id="pause">Pause</button>
-
     <script src="timer.js"></script>
     <script src="index.js"></script>
 </body>
