--- a/MovieFightApp/index.html
+++ b/MovieFightApp/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="column is-half notification is-primary tutorial">
-      <h1 class="title">Search For a Movier on Both Sides</h1>
+      <h1 class="title">Search For a Movies on Both Sides</h1>
       <p class="subtitle">We will tell you which is the best</p>
     </div>
     </div>
