--- a/MovieFightApp/index.html
+++ b/MovieFightApp/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="hero is-primary is-bold">
+    <section class="hero is-bold">
       <div class="hero-body">
         <div class="container">
           <h1 class="title">
