--- a/Maze_game/index.html
+++ b/Maze_game/index.html
@@ -2,8 +2,35 @@
 <html>
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.14.2/matter.min.js"></script>
+  <style>
+    body {
+      margin:0;
+    }
+
+    .hidden {
+      display: none !important;
+    }
+
+    h1 {
+      color: white;
+      font-size: 60px;
+    }
+
+    .winner {
+      display: flex;
+      position: absolute;
+      justify-content: center;
+      align-items: center;
+      z-index: 1;
+      height: 100vh;
+      width: 100vw;
+    }
+  </style>
   </head>
   <body>
+    <div class = "winner hidden">
+      <h1>You WIN</h1>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
