--- a/Maze_game/index.html
+++ b/Maze_game/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <div class = "winner hidden">
-      <h1>You WIN</h1>
+      <h1>You WIN!!</h1>
     </div>
     <script src="index.js"></script>
   </body>
